backend/services/auth/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadblancer 
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
